# EDA_Sampling

./: .gitignore  CMakeLists.txt  README.md
example_tests/: README
example_tests/examples/complex/n25_m25_b4-32_t109.8/: result.json
example_tests/examples/complex/n25_m25_b4-32_t168.7/: result.json
example_tests/examples/complex/n30_m30_b4-32_t149.9/: result.json
example_tests/examples/complex/n40_m40_b4-8_t85.7/: result.json
example_tests/examples/complex/n50_m50_b4-16_t99.0/: result.json
example_tests/examples/medium/n20_m20_b16-32_t39.7/: result.json
example_tests/examples/medium/n20_m20_b4-64_t39.2/: result.json
example_tests/examples/medium/n20_m20_b4-64_t43.1/: result.json
example_tests/examples/medium/n30_m30_b4-32_t21.3/: result.json
example_tests/examples/medium/n35_m35_b4-16_t34.6/: result.json
example_tests/examples/medium/n50_m50_b4-8_t31.1/: result.json
lib/cudd-3.0.0/: Makefile  config.status  libtool
lib/cudd-3.0.0/cudd/: cudd.h
src/implementation/: ArithmeticOperations.cpp  BDDVector.cpp  BitOperations.cpp  CalculateConstrains.cpp  InputFileParse.cpp  LogicOperations.cpp  OutPutToJson.cpp  OutputToDot.cpp  RelationalOperations.cpp  Sampling.cpp  Util.cpp
src/interface/: ArithmeticOperations.h  BDDVector.h  BitOperations.h  CalculateConstrains.h  InputFileParse.h  LogicOperations.h  OutPutToJson.h  OutputToDot.h  RelationalOperations.h  Sampling.h  Util.h
src/test/: ResFileParse.cpp  ResFileParse.h  test.cpp
赛题文件/: 2023作品设计报告要求.doc  README.md  实验结果.xlsx  服务器登录步骤.md  赛题补充说明.doc  赛题补充说明_1101.doc
(+12 files in other folders)
